SuppressWarnings annotations for JSON parser.
It could be done properly, but instead I added SuppressWarnings
annotations. Otherwise it would require it being properly tested.